tests/exec/assert-lt-cmp-error.stderr
At line 1.10 At <
Can't compare values of different types 1.0 and "3"

Error occurred.
