tests/exec/assert-lt-cmp-error.exec
cmd: load assert-lt-cmp-error.ecl
status: 1
